[package]
name = "find_apt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google_maps = "2.1"
rust_decimal = "1"
rust_decimal_macros = "1"
structopt = "0.3"
tokio = { version = "1.15.0", features = ["full"] }
derive_more = "0.99"
futures = "0.3"