[package]
name = "find_apt"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
panic = "abort"

[dependencies]
anyhow = "1.0"
derive_more = "0.99"
futures = "0.3"
google_maps = "2.1"
lazy_static = "1.4"
rust_decimal = "1"
rust_decimal_macros = "1"
structopt = "0.3"
tokio = { version = "1.15.0", features = ["full"] }